some minor changes

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         <h2>Currency Converter</h2>
         <form>
             <div class="amount">
-                <p>Amount</p>
+                <p><b>Amount</b></p>
                 <input type="text" value="1">
             </div>
             <div class="convert-box">
                 <div class="from">
-                    <p>From</p>
+                    <p><b>From</b></p>
                     <div class="select-input">
-                        <img src="https://flagcdn.com/48x36/us.png">
+                        <img src="https://flagcdn.com/48x36/us.png"> <pre>  </pre>  <!-- adding 2 spaces after flag -->
                         <select></select>
                     </div>
                 </div>
                 <div class="reverse"><i class="fas fa-exchange-alt"></i></div>
                 <div class="to">
-                    <p>To</p>
+                    <p><b>To</b></p>
                     <div class="select-input">
-                        <img src="https://flagcdn.com/48x36/gb.png">
+                        <img src="https://flagcdn.com/48x36/gb.png"> <pre>  </pre>  <!-- adding 2 spaces after flag -->
                         <select></select>
                     </div>
                 </div>
